<?xml version="1.0" encoding="UTF-8"?>

<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
        http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.dwarfeng</groupId>
        <artifactId>dwarfeng-ftp</artifactId>
        <version>3.0.1.a-SNAPSHOT</version>
    </parent>

    <artifactId>dwarfeng-ftp-core</artifactId>
    <name>dwarfeng-ftp-core</name>
    <url>https://github.com/DwArFeng/dwarfeng-ftp</url>

    <properties>
        <!-- 进行工程编码声明 -->
        <!-- 进行 JDK 版本声明 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>25</maven.compiler.release>
    </properties>

    <dependencies>
        <!-- JetBrains 静态注解 -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <scope>provided</scope>
        </dependency>
        <!-- 单元测试 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- 日志处理 -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <!-- Jakarta Annotation -->
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
        </dependency>
        <!-- Apache Commons 组件 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
        </dependency>
        <!-- Spring 框架 -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-expression</artifactId>
        </dependency>
        <!-- FastJson Json 工具 -->
        <dependency>
            <groupId>com.alibaba.fastjson2</groupId>
            <artifactId>fastjson2</artifactId>
        </dependency>
        <!-- Dutil 工具库 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>dutil-basic</artifactId>
        </dependency>
        <!-- Subgrade 组件 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>subgrade-basic</artifactId>
        </dependency>
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>subgrade-lifecycle</artifactId>
        </dependency>
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>subgrade-aop</artifactId>
        </dependency>
        <!-- 程序自身组件 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>dwarfeng-ftp-base</artifactId>
        </dependency>
    </dependencies>

    <build>
        <!-- 插件列表 -->
        <plugins>
            <!-- Maven 清理插件，用于清理测试时留下的日志。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>logs</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <!-- Maven 测试插件，用于选项式执行单元测试。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skip>${project.surefire.skip}</skip>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>
            <!-- Maven 强制规则插件，用于检查构建环境。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-build-baseline</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[25,26)</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>[3.9.16,)</version>
                                </requireMavenVersion>
                                <dependencyConvergence/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <!-- 配置资源目录 -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <!-- 配置测试资源目录 -->
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>
    </build>
</project>
